--- a/.github/workflows/scheduled-download.yml
+++ b/.github/workflows/scheduled-download.yml
@@ -1,8 +1,8 @@
-name: "Download a file regularly"
+name: Download Presslog
 
 on:
   schedule:
-  - cron: "* * * * *"
+  - cron: "12 * * * *"
 
 jobs:
   deploy:
