--- a/.github/workflows/scheduled-download.yml
+++ b/.github/workflows/scheduled-download.yml
@@ -2,15 +2,12 @@ name: Download Presslog
 
 on:
   schedule:
-  - cron: "12 * * * *"
+  - cron: "20 * * * *"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v3
-
-        - uses: valitydev/action-download-file@v1
-          with:
-            url: https://data.city.ames.ia.us/publicinformation/PressLog.pdf
-            target-path: presslogs/
+      - name: 📥 Download a file
+        run: wget -nc -P presslogs/ https://data.city.ames.ia.us/publicinformation/PressLog.pdf
+        shell: bash
