--- a/.github/workflows/download-presslog.yml
+++ b/.github/workflows/download-presslog.yml
@@ -8,7 +8,11 @@ jobs:
   download-presslog:
     runs-on: ubuntu-latest
     steps:
-      - name: 📥 Download a file
-        run: wget -nc -P presslogs/ https://data.city.ames.ia.us/publicinformation/PressLog.pdf
-        shell: bash
+      - name: Download a file
+        uses: valitydev/action-download-file@v1.0.6
+        with:
+          # URL to file
+          url: https://data.city.ames.ia.us/publicinformation/PressLog.pdf
+          # Target path
+          target-path: presslogs/
         
