--- a/.github/workflows/download-pdf.yaml
+++ b/.github/workflows/download-pdf.yaml
@@ -7,11 +7,10 @@ on:
       - main
 
 jobs:
-  deploy:
+  download-pdf:
     runs-on: ubuntu-latest
-      steps:
+    steps:
         - uses: actions/checkout@v3
-
         - uses: valitydev/action-download-file@v1
           with:
             url: https://data.city.ames.ia.us/publicinformation/PressLog.pdf
