--- a/.github/workflows/download-pdf.yaml
+++ b/.github/workflows/download-pdf.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git add "Presslog*.pdf"
+          git add "PressLog.pdf"
           git commit "*.pdf" -m 'Added presslog' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
 
