--- a/.github/workflows/download-isulog.yml
+++ b/.github/workflows/download-isulog.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(rvest, dependencies = TRUE)
+          install.packages("rvest", dependencies = TRUE)
         shell: Rscript {0}
 
       - name: Download ISU log
